# RUSTAPI

./: .env.example  Cargo.toml  README.md
entity/src/: blog.rs  mod.rs  prelude.rs  user.rs
migration/src/: lib.rs  m20250223_072711_create_user_table.rs  m20250223_072848_create_blog_table.rs
src/: main.rs
src/routes/: auth_routes.rs  blog_routes.rs  mod.rs  user_routes.rs
src/routes/handlers/: auth.rs  blog.rs  mod.rs  user.rs
src/routes/middleware/: auth_middleware.rs
src/utils/: constants.rs  jwt.rs
