[package]
name = "API_REST"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "entity", "migration"]


[dependencies]

entity = { path = "entity" }
migration = { path = "migration" } 


actix-web = "4.9.0"
dotenv = "0.15.0"
env_logger = "0.11.6"
lazy_static = "1.5.0"
serde = { version = "1.0.218", features = ["derive"] }
sea-orm = { version = "1.1.5", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }
sha256 = "1.5.0"
chrono = "0.4.39"
jsonwebtoken = "9.3.1"
actix-web-lab = "0.23.0"
